--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "simple-todo-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start:dev": "nodemon index.js"
+    "start:dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
